--- a/src/QuizApp.css
+++ b/src/QuizApp.css
@@ -10,7 +10,7 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #f9f9f9;
-    margin-top: 50%;
+    margin-top: 200px;
     background-color: rgb(220, 234, 239);
     
   }
